objects/LBI__TestDataTracking__c.object
<CustomObject>
    <description>Used to store key Ids for certain key standard objects, like Contacts and Accounts, so we can execute queries using indexes later.  Also ensures account number overlap will not become problematic.</description>
    <fields>
        <fullName>LBI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TestDataTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>TestDataTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>TestDataTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lattice Test Data Tracking</label>
    <nameField>
        <displayFormat>TDTN-{0000000000}</displayFormat>
        <label>Test Data Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Data Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>